// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`socket should default to WebsocketClient when no clientClass provided 1`] = `
Array [
  "my.url",
]
`;

exports[`socket should default to WebsocketClient when no clientClass provided 2`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`socket should default to WebsocketClient when no clientClass provided 3`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`socket should default to WebsocketClient when no clientClass provided 4`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`socket should default to WebsocketClient when no clientClass provided 5`] = `
Array [
  Array [
    "hello world",
  ],
]
`;

exports[`socket should use clientClass when passed in 1`] = `
Array [
  "my.url",
]
`;

exports[`socket should use clientClass when passed in 2`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`socket should use clientClass when passed in 3`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`socket should use clientClass when passed in 4`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`socket should use clientClass when passed in 5`] = `
Array [
  Array [
    "hello world",
  ],
]
`;
